--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <mat-card class="sidebar">
     <mat-card-title>Dictionary Categories</mat-card-title>
-    <mat-card-subtitle
-      >Select up to {{ max_selected_clusters }}:</mat-card-subtitle
-    >
+    <mat-card-subtitle>
+      Select categories to highlight instances in the text.<br/>
+      Colors will start repeating after {{max_clusters}} selections.
+    </mat-card-subtitle>
     <mat-card-content>
       <mat-toolbar>
         <button
