--- a/classroom/src/app/comparison/comparison.component.html
+++ b/classroom/src/app/comparison/comparison.component.html
@@ -2,7 +2,7 @@
   <mat-card class="sidebar">
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>
-      Select categories to highlight instances in the text.<br/>
+      Select categories to highlight instances in the text.<br />
       Colors will start to repeat after {{ max_clusters }} selections:
     </mat-card-subtitle>
     <mat-card-content>
@@ -29,7 +29,10 @@
               </mat-checkbox>
             </div>
             <!--<div>{{ node.counts }}</div>-->
-            <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{row:node}"></ng-container>
+            <ng-container
+              [ngTemplateOutlet]="patterncount"
+              [ngTemplateOutletContext]="{ row: node }"
+            ></ng-container>
           </li>
         </mat-tree-node>
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -67,7 +70,10 @@
               <!--<div [class.d_none]="treeControl.isExpanded(node)">
                 {{ node.counts }}
               </div>-->
-              <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{row:node}"></ng-container>
+              <ng-container
+                [ngTemplateOutlet]="patterncount"
+                [ngTemplateOutletContext]="{ row: node }"
+              ></ng-container>
             </div>
             <ul [class.d_none]="!treeControl.isExpanded(node)">
               <ng-container matTreeNodeOutlet></ng-container>
@@ -106,7 +112,10 @@
                 </mat-checkbox>
               </div>
               <!--<div>{{ node.counts }}</div>-->
-              <ng-container [ngTemplateOutlet]="patterncount" [ngTemplateOutletContext]="{row:node}"></ng-container>
+              <ng-container
+                [ngTemplateOutlet]="patterncount"
+                [ngTemplateOutletContext]="{ row: node }"
+              ></ng-container>
             </div>
             <div
               [class.pattern-table]="true"
@@ -138,7 +147,8 @@
       <as-split unit="percent" [direction]="direction">
         <as-split-area
           *ngFor="let doc of documents.documents; index as i"
-          [style.overflow]="'hidden'">
+          [style.overflow]="'hidden'"
+        >
           <div class="document_entry">
             <div class="text_head" [style.background]="doc_colors(doc.text_id)">
               <span>ID:&nbsp;{{ doc.text_id }}</span>
@@ -186,15 +196,34 @@
   </button>
 </ng-template>
 <ng-template #patterncount let-row="row">
-  <div  [class.d_none]="!hasPatterns(0,row) && treeControl.isExpanded(row)" matTooltip="{{row.count}}: {{row.counts[0]}} vs {{row.counts[1]}}" matTooltipPosition="after">
-    <svg xmlns="http://www.w3.org/2000/svg"
-         [style.width]="'80px'" [style.height]="'32px'">
-      <desc>{{row.counts.join(' vs ')}}</desc>
-      <rect [attr.x]="(50-row.left(max_count))+'%'" y="7" height="18" [attr.width]="row.left(max_count)+'%'"
-            [attr.fill]="dColors[0]" stroke-width="1"/>
-      <rect x="50%" y="7" height="18" [attr.width]="row.right(max_count)+'%'"
-            [attr.fill]="dColors[1]" stroke-width="1"/>
-      <line stroke="black" x1="50%" x2="50%" y1="0" y2="32"/>
+  <div
+    [class.d_none]="!hasPatterns(0, row) && treeControl.isExpanded(row)"
+    matTooltip="{{ row.count }}: {{ row.counts[0] }} vs {{ row.counts[1] }}"
+    matTooltipPosition="after"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      [style.width]="'80px'"
+      [style.height]="'32px'"
+    >
+      <desc>{{ row.counts.join(" vs ") }}</desc>
+      <rect
+        [attr.x]="50 - row.left(max_count) + '%'"
+        y="7"
+        height="18"
+        [attr.width]="row.left(max_count) + '%'"
+        [attr.fill]="dColors[0]"
+        stroke-width="1"
+      />
+      <rect
+        x="50%"
+        y="7"
+        height="18"
+        [attr.width]="row.right(max_count) + '%'"
+        [attr.fill]="dColors[1]"
+        stroke-width="1"
+      />
+      <line stroke="black" x1="50%" x2="50%" y1="0" y2="32" />
     </svg>
   </div>
 </ng-template>
