--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <mat-card class="sidebar">
+    <app-sunburst-chart [data]="sundata" [width]="sunwidth"></app-sunburst-chart>
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>
       Select categories to highlight instances in the text.<br />
