--- a/classroom/src/app/text-view/text-view.component.html
+++ b/classroom/src/app/text-view/text-view.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <mat-card class="sidebar">
-    <app-sunburst-chart [data]="sundata" [width]="sunwidth"></app-sunburst-chart>
+    <app-sunburst-chart
+      [data]="sundata"
+      [width]="sunwidth"
+    ></app-sunburst-chart>
     <mat-card-title>Dictionary Categories</mat-card-title>
     <mat-card-subtitle>
       Select categories to highlight instances in the text.<br />
@@ -63,8 +66,8 @@
                   <mat-icon class="mat-icon-rtl-mirror">
                     {{
                       treeControl.isExpanded(node)
-                        ? "expand_more"
-                        : "chevron_right"
+                        ? 'expand_more'
+                        : 'chevron_right'
                     }}
                   </mat-icon>
                 </button>
@@ -104,8 +107,8 @@
                   <mat-icon class="mat-icon-rtl-mirror">
                     {{
                       treeControl.isExpanded(node)
-                        ? "expand_more"
-                        : "chevron_right"
+                        ? 'expand_more'
+                        : 'chevron_right'
                     }}
                   </mat-icon>
                 </button>
