--- a/classroom/src/app/patterns/patterns.component.css
+++ b/classroom/src/app/patterns/patterns.component.css
@@ -12,8 +12,15 @@ app-nav {
   overflow: auto;
 }
 
+app-sunburst-chart {
+  min-width: 540px;
+  max-width: 720px;
+}
 .tree-node-invisible {
   display: none;
+}
+.tree {
+  width: 450px;
 }
 .tree ul,
 .tree li {
@@ -32,31 +39,18 @@ app-nav {
 .tooltip-icon {
   font-size: small;
 }
-.cluster-detail {
-  overflow: hidden;
-}
-.cluster-row td {
-  border-bottom-width: 0;
-}
-tr.cluster-detail-row {
-  height: 0;
-}
 
 .patterns_container {
-  max-width: 5.5in;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .pattern-table {
   margin-left: 3em;
   max-height: 13em; /*calc(30vh);*/
   overflow: auto;
-}
-
-.mat-column-pattern_count {
-  text-align: right;
-}
-.mat-column-count {
-  text-align: right;
 }
 
 summary {
