--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -1,8 +1,8 @@
 <mat-card *ngIf="category">
-  <mat-card-title>
-    Category: {{ category.id }}
+  <!-- <mat-card-title> -->
+    <!-- Category: {{ category.id }} -->
     <!-- label(category.id)-->
-  </mat-card-title>
+  <!-- </mat-card-title> -->
   <mat-card-content>
     <mat-table
       matSort
