--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -26,7 +26,7 @@
         <ng-template #noData
           ><mat-error
             >No data for the selected category:
-            {{ selected_category }}</mat-error
+            {{ selected_category.label }}</mat-error
           ></ng-template
         >
         <!--<google-chart #rankTable *ngIf="rank_data"
