Fixes various small issues.
dependency updates.
boxplot openning document action (forgot stv/).
Closing of menu in category-select.
Working on spacing in scatterplot.

--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -157,7 +157,7 @@
                         student_col: true,
                         model_entry: doc.instructor
                       }"
-                      (click)="open(doc.id)"
+                      (click)="open('stv/' + doc.id)"
                       >{{ doc.label }}</a
                     >
                     <ng-container
