Better eslint/prettier integration and fixes

--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -90,8 +90,8 @@
                     <mat-icon class="mat-icon-rtl-mirror">
                       {{
                         treeControl.isExpanded(node)
-                          ? "expand_more"
-                          : "chevron_right"
+                          ? 'expand_more'
+                          : 'chevron_right'
                       }}
                     </mat-icon>
                   </button>
@@ -128,8 +128,8 @@
                     <mat-icon class="mat-icon-rtl-mirror">
                       {{
                         treeControl.isExpanded(node)
-                          ? "expand_more"
-                          : "chevron_right"
+                          ? 'expand_more'
+                          : 'chevron_right'
                       }}
                     </mat-icon>
                   </button>
