Commenting update and code cleanup.
Removal of some unnecessary settings.

--- a/classroom/src/app/about/about.component.html
+++ b/classroom/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <article>
     <section>
-      <h1>DocuScope Classroom @ CMU</h1>
+      <h1>{{ title }} @ {{ institution }}</h1>
       <p>
         <dfn>{{ title }} @ {{ institution }}</dfn> is a university-wide resource
         for writing education. It is an interactive text analysis and
