--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -171,15 +171,14 @@
           </mat-tree-node>
         </mat-tree>
       </div>
-      <div>
-        <!--<angular-tag-cloud *ngIf="cloud_data && show_cloud" [data]="cloud_data"></angular-tag-cloud>-->
+      <!--<div>
         <app-rank-graph
           *ngIf="selected_category"
           [data]="data"
           [category]="selected_category"
           [unit]="unit"
         ></app-rank-graph>
-      </div>
+      </div>-->
     </mat-card-content>
   </mat-card>
 </div>
