--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -11,7 +11,7 @@
         <mat-drawer mode="side" opened disableClose class="options">
           <h4>Group Parameters:</h4>
           <div>
-            <mat-form-field>
+            <mat-form-field appearance="standard">
               <input
                 matInput
                 type="number"
