--- a/classroom/src/app/header/header.component.html
+++ b/classroom/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <mat-toolbar color="warn" role="heading" class="header"
+  <mat-toolbar color="primary" role="heading" class="header"
     ><!-- color="primary" -->
     <span>{{ title }} {{ institution }}</span>
     <span class="spacer"></span>
