--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -4,7 +4,7 @@
   <!-- label(category.id)-->
   <!-- </mat-card-title> -->
   <mat-card-content>
-    <mat-table
+    <mat-table *ngIf="ranking"
       matSort
       #rankSort="matSort"
       matSortDisableClear
