--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -29,11 +29,11 @@
       <google-chart
         #scatterplot
         *ngIf="scatter_data"
-        [title]="x_axis.label + ' vs ' + y_axis.label"
+        [title]="(x_axis?.label ?? 'X') + ' vs ' + (y_axis?.label ?? 'Y')"
         [type]="chartType"
         [columns]="[
-          x_category.id,
-          y_category.id,
+          x_category?.id ?? 'X',
+          y_category?.id ?? 'Y',
           { type: 'string', role: 'id' },
           { type: 'string', role: 'style' },
           { type: 'string', role: 'tooltip' }
