--- a/classroom/src/app/boxplot/boxplot.component.scss
+++ b/classroom/src/app/boxplot/boxplot.component.scss
@@ -1,3 +1,4 @@
+//@import '../../cmu-app-theme';
 .tool {
   display: flex;
   flex-flow: column;
@@ -15,9 +16,9 @@ app-nav {
   display: flex;
   flex-direction: row;
 }
-.selected {
+/*.selected {
   background-color: pink;
-}
+}*/
 
 .tooltip-icon {
   font-size: small;
