--- a/classroom/src/app/category-select/category-select.component.html
+++ b/classroom/src/app/category-select/category-select.component.html
@@ -1,10 +1,10 @@
-<ng-container *ngIf="data">
+<ng-container *ngIf="dictionary">
   <button mat-raised-button color="primary" [matMenuTriggerFor]="categoryMenu">
     Category<span *ngIf="selectedCategory">: {{ selectedCategory.label }}</span>
   </button>
   <mat-menu #categoryMenu="matMenu">
     <ng-template matMenuContent>
-      <ng-container *ngFor="let category of data.categories">
+      <ng-container *ngFor="let category of dictionary.categories">
         <button
           mat-menu-item
           [matMenuTriggerFor]="subcat"
