--- a/classroom/src/app/bubble-chart/bubble-chart.component.scss
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.scss
@@ -21,3 +21,16 @@ app-nav {
   color: blue;
   opacity: 0.4;
 }
+a.name_entry {
+  cursor: pointer;
+}
+
+circle.tick {
+  fill: none;
+  stroke: $cmu-secondary-blue;
+}
+text.tick {
+  alignment-baseline: middle;
+  dominant-baseline: middle;
+  text-anchor: middle;
+}
