--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -12,7 +12,7 @@
     <mat-card-content class="graph_container">
       <div>
         <div *ngIf="data" class="tree-node">
-          <span class="column-header">Column</span>
+          <span class="column-header">Category</span>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="column-header"
