--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -2,13 +2,13 @@
   <app-nav></app-nav>
   <mat-card *ngIf="corpus" class="container">
     <mat-card-title>Frequency</mat-card-title>
-    <mat-card-subtitle
-      >Frequency of the selected category for each document.</mat-card-subtitle
-    >
-    <mat-card-subtitle
-      >The bar represents the difference from the median value and is the
-      average number of instances per {{ unit }} words.</mat-card-subtitle
-    >
+    <mat-card-subtitle>
+      Frequency of the selected category for each document.
+    </mat-card-subtitle>
+    <mat-card-subtitle>The bar represents the difference from the
+      median value and is the average number of instances per
+      {{ unit }} words.
+    </mat-card-subtitle>
     <mat-card-content *ngIf="data">
       <aside class="select_category_box">
         <app-category-select
@@ -23,13 +23,14 @@
           [data]="data"
           [unit]="unit"
           [category]="category"
+          [sticky]="sticky"
         ></app-rank-graph>
-        <ng-template #noData
-          ><mat-error
-            >No data for the selected category:
-            {{ selected_category?.label ?? 'UNKNOWN' }}</mat-error
-          ></ng-template
-        >
+        <ng-template #noData>
+          <mat-error>
+            No data for the selected category:
+            {{ selected_category?.label ?? 'UNKNOWN' }}
+          </mat-error>
+        </ng-template>
         <!--<google-chart #rankTable *ngIf="rank_data"
             [type]="'Table'"
             [columnNames]="['Name', 'Frequency']"
